--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="micro_section">
             <h3 style="margin-left: 10px;">stretch</h3>
-            <div class="content space-around alit-stretch">
+            <div class="stretch-div space-around alit-stretch">
                 <div style="background-color: rgb(27, 160, 0);"></div>
                 <div style="background-color: rgb(255, 0, 0);"></div>
                 <div style="background-color: rgb(255, 217, 0);"></div>
